<resources>

    <string name="app_name">PDB</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="person_id">PESEL</string>
    <string name="personal_data">Dane osobowe</string>
    <string name="details">Szczegóły</string>
    <string name="insurance">Ubezpieczenie</string>
    <string name="photo">Zdjęcie</string>
    <string name="birth_date">Data urodzenia</string>
    <string name="get_data">Pobierz dane z nr. PESEL</string>
    <string name="sex">Płeć</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="other_document_id">Nr innego dokumentu</string>
    <string name="take_photo">Zrób zdjęcie</string>
    <string name="photo_taken">Zdjęcie zostało zapisane</string>
    <string name="no_image">Brak obrazu</string>
    <string name="address">Adres</string>
    <string name="street">Ulica</string>
    <string name="house_no">Nr domu</string>
    <string name="apartment_no">Nr mieszkania</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="city">Miasto</string>
    <string name="data_error">Błąd danych</string>
    <string name="incorrect_persons_id">Numer PESEL jest nieprawidłowy</string>
    <string name="date_hint">RRRR-MM-DD</string>
    <string name="add_person">Dodaj osobę</string>
    <string name="save">Zapisz</string>
    <string name="saved">Zapisano</string>
    <string name="new_person">Nowa osoba</string>

</resources>
