<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/personal_data"
	        style="?android:listSeparatorTextViewStyle" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/name"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="3" />
	        
	        <EditText
		        android:id="@+id/edit_text_name"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:inputType="textPersonName"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="7" >
		        
		        <!--<requestFocus />-->
		    </EditText>
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/surname"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="3" />
	        
	        <EditText
		        android:id="@+id/edit_text_surname"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:inputType="textPersonName"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="7" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/person_id"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="3" />
	        
	        <EditText
		        android:id="@+id/edit_text_persons_id"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:inputType="number"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="7" />
	        
	    </LinearLayout>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/details"
	        style="?android:listSeparatorTextViewStyle" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/insurance"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="4" />
	        
	        <CheckBox
	            android:id="@+id/check_box_insurance"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:layout_weight="6" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/birth_date"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="4" />
	        
	        <EditText
		        android:id="@+id/edit_text_birth_date"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:inputType="date"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="6" />
	        
	    </LinearLayout>
	    
	     <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/sex"
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="4" />
	        
	        <RadioGroup
	            android:orientation="vertical"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:layout_weight="6">
	            
	            <RadioButton
	                android:id="@+id/radio_male"
	                android:text="@string/male" />
	            
	            <RadioButton
	                android:id="@+id/radio_female"
	                android:text="@string/female" />
	            
	        </RadioGroup>
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:layout_marginLeft="16dp"
		        android:layout_gravity="fill"
		        android:layout_weight="4" />
	        
	        <Button
		        android:id="@+id/button_get_birth_date"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/get_data"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="6" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/other_document_id"
		        android:layout_marginLeft="16dp"
		        android:layout_weight="4"
		        android:layout_gravity="fill" />
	        
	        <EditText
		        android:id="@+id/edit_text_other_document_id"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:inputType="number"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:layout_weight="6" />
	        
	    </LinearLayout>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/photo"
	        style="?android:listSeparatorTextViewStyle" />
	
	    <ImageView
	        android:id="@+id/image_view_person"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_launcher" />
	
	    <ImageButton
	        android:id="@+id/image_button_photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:src="@android:drawable/ic_menu_camera" />
	
	</LinearLayout>
	
</ScrollView>
